change title text

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="sec-one-icons">
                 <div class="gift-icon gift ">
                     <img src="./images/gift icon.png" width="35px">
-                    <p class="gift-set"> Give my article</p>
+                    <p class="gift-set"> Give this article</p>
                 </div>
                 <img class="gift img gifts" src="./images/share arrow.png" width="35px">
                 <i class="fa-regular gift gifts fa-bookmark"></i>
