Updated desktop size media queries

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                     on his door with a bottle of Champagne</a> to tell him the news.</p>
                     <br>
             <div class="iframe-container spec">
-                <iframe  src="https://www.youtube.com/embed/ZlfIVEy_YOA" title="YouTube video player"
+                <iframe src="https://www.youtube.com/embed/ZlfIVEy_YOA" title="YouTube video player"
                     frameborder="0" allow="accelerometer; autoplay clipboard-write; encrypted-media; gyroscope picture-in-picture"
                     allowfullscreen></iframe>
                 <p class="stanford">Stanford Professor Andrei Linde celebrates physics breakthrough Video by Stanford University</p>
@@ -817,7 +817,7 @@
     <div class="footer-disp">
         <div class="footer-display">
             <p class="offer"><b>Special offer.</b>Subscribe for <span>$2</span> $0.25 a week</p>
-            <p><i class="fa-solid fa-angle-up"></i></p>
+            <p class="expand1"><i class="fa-solid fa-angle-up"></i></p>
             <p class="expand">EXPAND <i class="fa-solid fa-angle-up"></i></p>
         </div>
     </div>
