Updated items responsiveness

--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
                
     
             </div>
-            <div class="more1-item">
+            <div>
                 <div class="more-edit">
                     <h3 class="edit">Editors` Picks</h3>
                 </div>
